feat: add event binding

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -51,4 +51,26 @@
       Apareço somente ao selecionar o erro
     </div>
   </article>
+  <article>
+    <h3>Event  binding</h3>
+    <div>
+      <button class="btn btn-primary" (click)="botaoClickado()">Me Clique</button>
+      <br><br>
+      <input type="text"
+        (keyup)="onKeyUp($event)"
+        (keyup.enter)="salvarValor(campoInput.value)"
+        (blur)="salvarValor(campoInput.value)"
+        #campoInput
+        />
+      <br><br>
+      <p>O valor atual é: {{ valorAtual }}</p>
+      <p>O valor salvo é: {{ valorSalvo }}</p>
+      <br><br>
+      <span
+        (mouseover)="onMouseOverOut()"
+        (mouseout)="onMouseOverOut()"
+        [class.highlight]="isMouseOver"
+      >Passe o mouse sobre mim</span>
+    </div>
+  </article>
 </section>
