feat: add input properties

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<section class="property-binding">
+<!-- <section class="property-binding">
   <article>
     <h3>Interpolation/Interpolação</h3>
     <p>String rederizada com interpolação: {{ url }}</p>
@@ -44,7 +44,6 @@
     >
       Erro
     </div>
-    <!-- Utilização de Ternario -->
     <div class="alert alert-danger" role="alert"
     [style.display]="classe.value == 'alert-danger' ? 'block' : 'none' "
     >
@@ -74,4 +73,11 @@
     </div>
   </article>
   <app-two-way-data></app-two-way-data>
+</section> -->
+<section class="input-output-properties">
+  <article>
+    <h3>Input/Output Properties</h3>
+    <app-curso [nome]="nomeCurso"></app-curso>
+  </article>
 </section>
+
