--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -78,6 +78,9 @@
   <article>
     <h3>Input/Output Properties</h3>
     <app-curso [nome]="nomeCurso"></app-curso>
+    <contador [valor]="valorInicial"
+      (mudouValor)="onMudouValor($event)"
+    ></contador>
   </article>
 </section>
 
